<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.weather.details.WeatherDetailsFragment">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/layout_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Tuesday"
                    />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dayTextView"
                    tools:text="28 October, 2021"
                    />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/summaryCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dateTextView">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/avgTemperatureTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginBottom="16dp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toStartOf="@id/temperatureDescriptionTextView"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="16℃" />

                        <TextView
                            android:id="@+id/weatherConditionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginBottom="16dp"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/temperatureDescriptionTextView"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/avgTemperatureTextView"
                            app:layout_constraintVertical_bias="0.0"
                            tools:text="Sunny" />

                        <TextView
                            android:id="@+id/temperatureDescriptionTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginBottom="16dp"
                            android:textColor="@color/black"
                            android:textSize="40sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="HOT" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.efedaniel.vestiaireweather.presentation.common.customviews.DetailsCardView
                    android:id="@+id/minTemperatureCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/maxTemperatureCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/summaryCardView"
                    app:metricImage="@drawable/ic_temperature"
                    app:metricText="@string/min_temperature" />

                <com.efedaniel.vestiaireweather.presentation.common.customviews.DetailsCardView
                    android:id="@+id/maxTemperatureCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/minTemperatureCardView"
                    app:layout_constraintTop_toBottomOf="@id/summaryCardView"
                    app:metricImage="@drawable/ic_temperature"
                    app:metricText="@string/max_temperature" />

                <com.efedaniel.vestiaireweather.presentation.common.customviews.DetailsCardView
                    android:id="@+id/windSpeedCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/airPressureCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/minTemperatureCardView"
                    app:metricImage="@drawable/ic_wind_speed"
                    app:metricText="@string/wind_speed" />

                <com.efedaniel.vestiaireweather.presentation.common.customviews.DetailsCardView
                    android:id="@+id/airPressureCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/windSpeedCardView"
                    app:layout_constraintTop_toBottomOf="@id/maxTemperatureCardView"
                    app:metricImage="@drawable/ic_air_pressure"
                    app:metricText="@string/air_pressure" />

                <com.efedaniel.vestiaireweather.presentation.common.customviews.DetailsCardView
                    android:id="@+id/humidityCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/cloudsCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/windSpeedCardView"
                    app:metricImage="@drawable/ic_humidity"
                    app:metricText="@string/humidity" />

                <com.efedaniel.vestiaireweather.presentation.common.customviews.DetailsCardView
                    android:id="@+id/cloudsCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/humidityCardView"
                    app:layout_constraintTop_toBottomOf="@id/airPressureCardView"
                    app:metricImage="@drawable/ic_cloud"
                    app:metricText="@string/cloudiness" />

                <com.efedaniel.vestiaireweather.presentation.common.customviews.DetailsCardView
                    android:id="@+id/gustCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/popCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/humidityCardView"
                    app:metricImage="@drawable/ic_wind_speed"
                    app:metricText="@string/wind_gust" />

                <com.efedaniel.vestiaireweather.presentation.common.customviews.DetailsCardView
                    android:id="@+id/popCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/gustCardView"
                    app:layout_constraintTop_toBottomOf="@id/cloudsCardView"
                    app:metricImage="@drawable/ic_rainfall"
                    app:metricText="@string/probability_of_precipitation" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>